--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="server_base_url">http://baka.kr:9009/</string>
+<!--    <string name="server_base_url">http://192.168.35.235:9009/</string>-->
 </resources>
